# point-in-polygon

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
include/: polygon.hpp
src/example/: example.cpp  example2.cpp
